# dead-man-switch

./: .Dockerfile  .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
