[package]
name = "dead-man-switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.0", features = ["full"] }
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
